Fix model width on small screen devices.

--- a/src/containers/App.scss
+++ b/src/containers/App.scss
@@ -44,6 +44,7 @@ span.spacer
 		border: none;
 		border-radius: 0;
 		height: 100%;
+		max-width: none;
 	}
 
 	h1, h2, h3
